# pyproject.toml

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Task-Manager"
version = "0.1.0"
readme = "README.md"
authors = [{ name = "Erest Albu", email = "admi4al@mail.ru" }]
dependencies = [
    "click >= 8.1.3",
]

[project.scripts]
task_m = "CLI:cli"